# brandtemplate

./: .gitignore  README.md  pyproject.toml  test.ipynb  todo.md
brandtemplate/: __init__.py
brandtemplate/plotnine/: plotnine_extra.py  plotnine_theme.py
brandtemplate/qmd_template/: cli_import_template.py  import_template.py
brandtemplate/qmd_template/template_files/: _extension.yml  theme.scss
brandtemplate/template_files/: _extension.yml  template.qmd  theme.scss
example/: example.ipynb
template_config/: config.yaml  config_template.py  previous_config.yaml  previous_config2.yaml  template_config.py
