[tool.poetry]
name = "brandtemplate"
version = "0.1.0"
description = "Template for qmd presenations"
authors = ["aplunket <applunket@gmail.com>"]
readme = "README.md"
include = [
  "brandtemplate/qmd_template/template_files/*"
]

[tool.poetry.dependencies]
python = "^3.9"
plotnine = "^0.13.6"
great-tables = "^0.9.0"
presoutput = "^0.1.0"

[tool.poetry.group.dev.dependencies]
pylance = "^0.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


